# Use-Change-Hunter

./: README.md
use-change-hunter/: .env.example  ARCHITECTURE.md  FRONTEND_COMPLETE.md  FRONTEND_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  README.md  docker-compose.yml
use-change-hunter/backend/: Dockerfile  ROUTES_STATUS.md  pyproject.toml
use-change-hunter/backend/app/: main.py  types.py
use-change-hunter/backend/app/api/: router.py
use-change-hunter/backend/app/api/routes/: export.py  property.py  scenario.py  score.py  search.py
use-change-hunter/backend/app/clients/: geocode_client.py  ibex_client.py
use-change-hunter/backend/app/core/: config.py  logging.py
use-change-hunter/backend/app/db/: models.py  session.py
use-change-hunter/backend/app/db/migrations/: 001_init.sql
use-change-hunter/backend/app/schemas/: api.py  schemas.py
use-change-hunter/backend/app/services/: cache_service.py  export_service.py  planning_service.py  scenario_service.py  scoring_service.py
use-change-hunter/backend/app/utils/: geo.py  text.py
use-change-hunter/frontend/: .env.local  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
use-change-hunter/frontend/src/: globals.css
use-change-hunter/frontend/src/app/: layout.tsx  page.tsx
use-change-hunter/frontend/src/app/property/[id]/: page.tsx
use-change-hunter/frontend/src/app/search/: page.tsx
use-change-hunter/frontend/src/components/: ExportDialog.tsx  Map.tsx  PrecedentsList.tsx  PropertyCard.tsx  ScenarioBuilder.tsx  ScoreCard.tsx  SearchBar.tsx  index.ts
use-change-hunter/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Tabs.tsx
use-change-hunter/frontend/src/lib/: api-client.ts  hooks.ts
use-change-hunter/frontend/src/lib/stores/: searchStore.ts
use-change-hunter/frontend/src/types/: index.ts
use-change-hunter/worker/: requirements.txt  worker.py
use-change-hunter/worker/jobs/: batch_score.py  prefetch_demo.py
