[tool.poetry]
name = "use-change-hunter-backend"
version = "0.1.0"
description = "FastAPI backend for Use-Change Hunter - planning-based property value-add platform"
authors = ["Use-Change Hunter Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiohttp = "^3.9.1"
redis = {version = "^5.0", extras = ["asyncio"]}
python-dotenv = "^1.0.0"
geopandas = "^0.14.0"
shapely = "^2.0"
weasyprint = "^60.1"
openpyxl = "^3.11.0"
python-multipart = "^0.0.6"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
httpx = "^0.25.2"
tenacity = "^8.2.3"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
